# tap-parquet

./: README.md  pyproject.toml
tap_parquet/: streams.py  tap.py
tap_parquet/tests/: __init__.py  test_core.py  test_parquet_methods.py
