[tool.poetry]
name = "tap-parquet"
version = "0.0.1"
description = "`tap-parquet` is Singer tap for Parquet, built with the Singer SDK."
authors = ["Aaron Steers <aj@meltano.com>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "<3.9,>=3.6"
requests = "^2.25.1"
singer-sdk = "^0.1.0"
pyarrow = "^3.0.0"

[tool.poetry.dev-dependencies]
pytest = "^6.1.2"
black = {version = "^20.8b1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
# CLI declaration
tap-parquet = 'tap_parquet.tap:cli'
